[project]
name = "secret-sentry"
version = "0.1.0"
description = "An MCP server that detects hardcoded secrets, credentials, and risky values in code"
requires-python = ">=3.10"
dependencies = ["mcp"]

[project.scripts]
secret-sentry = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["normalfile.txt", "README.md", "*.txt"]
