[project]
name = "secret-sentry"
version = "0.1.0"
description = "Pipeline-based MCP server for detecting hardcoded secrets, credentials, and risky values"
requires-python = ">=3.10"
dependencies = ["mcp"]

[project.scripts]
secret-sentry = "secret_sentry.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secret_sentry"]
